# nzgd_data_extraction

./: .gitignore  README.md  better_funcs.py  check_download_batch.py  check_download_batch1.py  check_download_batch2.py  check_that_downloads_were_complete.py  combine_download_notes_dicts.py  config.yaml  cpt_region_stats.py  delete_incomplete_nzgd_record_downloads.py  delete_partial_downloads.py  examine_url_df.py  file_standardization_stats.py  folium_map.py  get_local_nzgd_inventory.py  load_hdf5.py  load_nzgd_data.py  load_nzgd_data_script.py  load_parquet_example.py  loading_funcs_for_nzgd_data.py  loading_helper_functions.py  main_nzgd_download_script.py  nzgd_download_helper_functions.py  nzgd_stats.py  organise_cpt_into_region.py  organise_data_into_regions_funcs.py  organise_data_into_regions_script.py  organize_downloads.py  pyproject.toml  requirements.txt  setup.py  spreadsheet_display_helper.py  try_pygmt.py
download_nzgd_data/download/: combine_metadata_rows.py  download_config.py  download_config.yaml  nzgd_download_helper_functions.py
download_nzgd_data/httpserver/: lib.py
download_nzgd_data/lib/: map.py  mapping.py  organise.py  process_cpt_data.py  processing_helpers.py
download_nzgd_data/organise/: lib.py  organise_data_into_regions_funcs.py
download_nzgd_data/process/: loading_funcs_for_nzgd_data.py
download_nzgd_data/resources/: cpt_column_name_descriptions.toml  known_false_positive_column_names.toml
download_nzgd_data/utils/: config.py
resources/: cpt_column_name_descriptions.toml  known_special_cases.toml
(+105 files in other folders)
