[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "download_nzgd_data"
authors = [
    {name = "QuakeCoRE" },
]
description = "For downloading and processing data from the New Zealand Geotechnical Database (NZGD)"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
