[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nzgd_data_extraction"
authors = [
    {name = "QuakeCoRE" },
]
description = "PACKAGE DESCRIPTION HERE"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
